--- a/Source/Xamarin.Android.StickyHeaders/Xamarin.Android.StickyHeaders.csproj
+++ b/Source/Xamarin.Android.StickyHeaders/Xamarin.Android.StickyHeaders.csproj
@@ -68,10 +68,12 @@
     <Compile Include="SectionAdapter.cs" />
     <Compile Include="SectionHeader.cs" />
     <Compile Include="SectionIndexAdapter.cs" />
+    <Compile Include="SectionIndexAdapterDelegate.cs" />
     <Compile Include="SectionItem.cs" />
     <Compile Include="SectionType.cs" />
     <Compile Include="IStickyHeaderAdapter.cs" />
     <Compile Include="SimpleItem.cs" />
+    <Compile Include="SimpleItemAdapter.cs" />
     <Compile Include="StickyHeaderItemDecoration.cs" />
   </ItemGroup>
   <ItemGroup>
